feat: update version (#146)
* new version

* replace jdk11 method